src/objects/Issue_Area_Donations__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issue Area Donations</relationshipLabel>
        <relationshipName>Issue_Area_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Issue Area Donations</relationshipLabel>
        <relationshipName>Issue_Area_Donations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issue_Area__c</fullName>
        <label>Issue Area</label>
        <referenceTo>Issue_Area__c</referenceTo>
        <relationshipLabel>Issue Area Donations</relationshipLabel>
        <relationshipName>Issue_Area_Donations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Issue Area Donations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Area Donations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Area Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>